--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,5 +16,11 @@
     "assets/scss/materialize/**"
   ],
   "liveSassCompile.settings.generateMap": false,
-  "liveSassCompile.settings.autoprefix": ["> 1%", "last 2 versions"]
+  "liveSassCompile.settings.autoprefix": [
+    "> 1%",
+    "last 2 versions"
+  ],
+  "files.exclude": {
+    "**/.DS_Store": false
+  }
 }
